# astgrepr

./: .Rbuildignore  .gitignore  404.html  CNAME  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  air.toml  authors.html  configure  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml  test.py
R/: extendr-wrappers.R  node.R  print.R  rule.R  tinytest.R  tree.R  utils.R
_snapshots/: ast_rule_basic_kind.txt  ast_rule_basic_pattern.txt  one_fix.txt  several_fixes.txt
articles/: astgrepr.html  index.html
inst/: WORDLIST
man/: ast_rule.Rd  astgrepr-package.Rd  expect_snapshot.Rd  node-find.Rd  node-fix.Rd  node-get-match.Rd  node-info.Rd  node-is.Rd  node-range.Rd  node-text.Rd  node-traversal.Rd  node_get_root.Rd  node_kind.Rd  node_range.Rd  pattern_rule.Rd  relational_rule.Rd  tree_new.Rd  tree_rewrite.Rd  tree_root.Rd
news/: index.html
reference/: ast_rule.html  expect_snapshot.html  index.html  node-find.html  node-fix.html  node-get-match.html  node-info.html  node-is.html  node-range.html  node-text.html  node-traversal.html  node_find.html  node_get_match.html  node_get_root.html  node_is_named.html  node_kind.html  node_matches.html  node_next_all.html  node_range_all.html  node_replace_all.html  node_text_all.html  pattern_rule.html  relational_rule.html  tree_new.html  tree_rewrite.html  tree_root.html
src/rust/: Cargo.toml  vendor-config.toml  vendor.tar.xz
src/rust/src/: language.rs  lib.rs  node.rs  range.rs  rerr.rs  ser.rs  unicode_position.rs
(+61 files in other folders)
