[package]
name = 'astgrepr'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'astgrepr'

[profile.release]
lto = true
codegen-units= 1

[dependencies]
ast-grep-core = "0.24.1"
ast-grep-config = "0.24.1"
extendr-api = "0.7.0"
once_cell = "1.19.0"
anyhow = "1.0.75"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r.git" }
serde = "1.0.197"
tree-sitter-facade-sg = "0.21.5"
