[package]
name = 'astgrepr'
version = '0.1.0'
edition = '2021'
rust-version = '1.78.0'

[lib]
crate-type = ['staticlib']
name = 'astgrepr'

[profile.release]
lto = true
codegen-units= 1

[dependencies]
ast-grep-core = "0.32.2"
ast-grep-config = "0.32.2"
extendr-api = "0.8.0"
tree-sitter-r = "1.0.1"

[env]
MACOSX_DEPLOYMENT_TARGET = "15.4"
